--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=brainfit
+spring.application.name=xe
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=system
+spring.datasource.password=root
+
+spring.flyway.baseline-on-migrate = true
+spring.flyway.clean-on-validation-error = true
+spring.flyway.clean-disabled = false
