--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,9 +1,7 @@
 spring.application.name=brainfit
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.jpa.properties.hibernate.default_schema=system
-spring.datasource.username=system
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/brainfit
+spring.datasource.username=postgres
+spring.datasource.password=dfv
 spring.flyway.baseline-on-migrate = true
-
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
